[tool.poetry]
name = "JDUrls"
version = "0.1.1"
license = "LGPL-3.0-or-later"
description = "Display source urls from JDownloader2 LinkGrabber"
authors = ["Francesco Guarnieri"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
